--- a/projetoimplementa2/projetoimplementa2.cbp
+++ b/projetoimplementa2/projetoimplementa2.cbp
@@ -31,6 +31,10 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="getline.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="getline.h" />
 		<Unit filename="lista.c">
 			<Option compilerVar="CC" />
 		</Unit>
